# ros2_ws

./: README.md
p3at_simulation/: setup.cfg  setup.py
p3at_simulation/data/: Q_model.pth  calc_estados.py  calc_estados_discr.py  calc_recompensa.py  calcula_acao.py  convert_model.py  meu_robo_treinado.npz  my1st_robot_qlearning_save.py  treinamento_dqn.py
p3at_simulation/data/Q_model/: data.pkl
p3at_simulation/install/: local_setup.sh  setup.bash
p3at_simulation/install/p3at_simulation/share/p3at_simulation/: package.xml  package.zsh
p3at_simulation/install/p3at_simulation/share/p3at_simulation/launch/: p3at_gazebo.launch.py
p3at_simulation/install/p3at_simulation/share/p3at_simulation/urdf/: p3at.gazebo  p3at.xacro
p3at_simulation/launch/: p3at_circle.launch.py  p3at_gazebo.launch.py
p3at_simulation/p3at_simulation/: dqn_agent.py  env_ros2_gym.py  p3at_controller.py
p3at_simulation/p3at_simulation/nodes/: p3at_dqn_controller.py
p3at_simulation/urdf/: p3at (cópia).xacro  p3at.txt
ros2_ws/src/p3at_qlearning_simulation_v2/: package.xml  setup.cfg  setup.py
ros2_ws_robo_volta/ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_robo_volta/ros2_ws/log/: latest_build
src/p3at_qlearning_simulation_v2/: setup.py
src/p3at_qlearning_simulation_v2/launch/: multi_p3at.launch.py
src/p3at_qlearning_simulation_v2/meshes/: base_cam.dae
src/p3at_qlearning_simulation_v2/p3at_qlearning_simulation_v2/: dqn_politica.pt  dqn_politica_meta.npz  my1st_robot_dqn_save.py  my1st_robot_qlearning_save.py  p3at_q_policy.py  politica.npz
(+170 files in other folders)
