<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p3at_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edson@todo.todo">edson</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <!-- LINHAS ADICIONADAS - ESSENCIAL PARA GAZEBO E XACRO -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- FIM DAS LINHAS ADICIONADAS -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
